[project]
name = "PythonPolyDataHDF"
dynamic = ["version"]
description = "Python-based vtkPolyData HDF5 reader and writer"
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["VTK", "PolyData", "HDF5"]
authors = [
    {email = "h.strandenes@km-turbulenz.no"},
    {name = "Håkon Strandenes"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization"
]

dependencies = [
    "numpy",
    "h5py >= 3.3.0",
    "vtk >= 9.1.0"
]

[tool.setuptools.dynamic]
version = {attr = "PythonPolyDataHDF.__version__"}

[project.optional-dependencies]
test = [
    "pytest",
    "flake8"
]

[project.urls]
homepage = "https://github.com/hakostra/PythonPolyDataHDF"
repository = "https://github.com/hakostra/PythonPolyDataHDF"

